--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-twitter-video-downloader",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://twitter-downloader-backend.herokuapp.com/",
+  "proxy": "https://twitter-downloader-backend.herokuapp.com:8000",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
